--- a/environment_psyc158.yml
+++ b/environment_psyc158.yml
@@ -168,23 +168,39 @@ dependencies:
   - qtpy=2.2.0=pyhd8ed1ab_0
   - r-base=4.1.3=h234e2ac_1
   - r-base64enc=0.1_3=r41h28b5c78_1004
+  - r-boot=1.3_28=r41hc72bb7e_0
+  - r-class=7.3_20=r41h28b5c78_0
   - r-cli=3.3.0=r41h8619c4b_0
+  - r-cluster=2.1.3=r41h8e0a2a9_0
+  - r-codetools=0.2_18=r41hc72bb7e_0
   - r-crayon=1.5.1=r41hc72bb7e_0
   - r-digest=0.6.29=r41h9951f98_0
   - r-ellipsis=0.3.2=r41h28b5c78_0
   - r-evaluate=0.16=r41hc72bb7e_0
   - r-fansi=1.0.3=r41h0f1d5c4_0
   - r-fastmap=1.1.0=r41h9951f98_0
+  - r-foreign=0.8_82=r41h28b5c78_0
   - r-glue=1.6.2=r41h0f1d5c4_0
   - r-htmltools=0.5.3=r41h8619c4b_0
   - r-irdisplay=1.1=r41hd8ed1ab_0
   - r-irkernel=1.3=r41hc72bb7e_0
   - r-jsonlite=1.8.0=r41h0f1d5c4_0
+  - r-kernsmooth=2.23_20=r41he19034d_0
+  - r-lattice=0.20_45=r41h28b5c78_0
   - r-lifecycle=1.0.1=r41hc72bb7e_0
+  - r-mass=7.3_58.1=r41hef1f586_0
+  - r-matrix=1.4_1=r41ha2825d1_0
+  - r-mgcv=1.8_40=r41h60b693f_0
+  - r-nlme=3.1_159=r41h225c1e1_0
+  - r-nnet=7.3_17=r41h28b5c78_0
   - r-pbdzmq=0.3_7=r41h5cc58b7_0
   - r-pillar=1.8.1=r41hc72bb7e_0
+  - r-recommended=4.1=r41hd8ed1ab_1004
   - r-repr=1.1.4=r41h785f33e_0
   - r-rlang=1.0.4=r41h8619c4b_0
+  - r-rpart=4.1.16=r41h28b5c78_0
+  - r-spatial=7.3_15=r41h28b5c78_0
+  - r-survival=3.4_0=r41hef1f586_0
   - r-utf8=1.2.2=r41h28b5c78_0
   - r-uuid=1.1_0=r41h0f1d5c4_0
   - r-vctrs=0.4.1=r41hc4bb905_0
