--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ repository:
   # Launch button settings
 launch_buttons:
   notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
-  binderhub_url             : https://mybinder.org/v2/gh/smburns47/Psyc158/main  # The URL of the BinderHub
+  binderhub_url             : https://mybinder.org  # The URL of the BinderHub home
   jupyterhub_url            : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
   thebe                     : true  # Add a thebe button to pages (requires the repository to run on Binder)
   colab_url                 : "" # The URL of Google Colab (https://colab.research.google.com)
