--- a/_config.yml
+++ b/_config.yml
@@ -29,11 +29,12 @@ bibtex_bibfiles:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/smburns47/Psyc158  # Online location of your book
+  branch: main  # Which branch of the repository should be used when creating links (optional)
    
   # Launch button settings
 launch_buttons:
   notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
-  binderhub_url             : https://mybinder.org  # The URL of the BinderHub home
+  binderhub_url             : https://mybinder.org # The URL of the BinderHub home
   jupyterhub_url            : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
   thebe                     : true  # Add a thebe button to pages (requires the repository to run on Binder)
   colab_url                 : "" # The URL of Google Colab (https://colab.research.google.com)
