--- a/_config.yml
+++ b/_config.yml
@@ -37,4 +37,5 @@ launch_buttons:
   binderhub_url             : https://mybinder.org # The URL of the BinderHub home
   jupyterhub_url            : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
   thebe                     : true  # Add a thebe button to pages (requires the repository to run on Binder)
+  kernel_name               : "R"
   colab_url                 : "" # The URL of Google Colab (https://colab.research.google.com)
