explicitly defining ir kernel in _config.yml since thebe cant seem to find it.

--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,15 @@ repository:
    
   # Launch button settings
 launch_buttons:
-  notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
-  binderhub_url             : https://mybinder.org # The URL of the BinderHub home
-  jupyterhub_url            : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
-  thebe                     : true  # Add a thebe button to pages (requires the repository to run on Binder)
-  kernel_name               : "R"
-  colab_url                 : "" # The URL of Google Colab (https://colab.research.google.com)
+  notebook_interface: classic  # The interface interactive links will activate ["classic", "jupyterlab"]
+  binderhub_url     : https://mybinder.org # The URL of the BinderHub home
+  jupyterhub_url    : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
+  thebe             : true  # Add a thebe button to pages (requires the repository to run on Binder)
+  colab_url         : "" # The URL of Google Colab (https://colab.research.google.com)
+
+sphinx:
+  extra_extensions:   # A list of extra extensions to load by Sphinx (added to those already used by JB).
+  local_extensions:   # A list of local extensions to load by sphinx specified by "name: path" items
+  recursive_update: false # A boolean indicating whether to overwrite the Sphinx config (true) or recursively update (false)
+  config          :  # key-value pairs to directly over-ride the Sphinx configuration
+    kernel: ir
