--- a/_config.yml
+++ b/_config.yml
@@ -44,4 +44,6 @@ sphinx:
   local_extensions:   # A list of local extensions to load by sphinx specified by "name: path" items
   recursive_update: false # A boolean indicating whether to overwrite the Sphinx config (true) or recursively update (false)
   config          :  # key-value pairs to directly over-ride the Sphinx configuration
-    kernel: ir
+  
+  kernelOptions:
+    kernelName: "ir"
