--- a/_toc.yml
+++ b/_toc.yml
@@ -35,24 +35,22 @@ parts:
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-13.ipynb
     title: Chapter 13 - Multivariable Models
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-14.ipynb
-    title: Chapter 14 - Nonlinear Models
-  - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-15.ipynb
-    title: Chapter 15 - Models with Categorical Outcomes
+    title: Chapter 14 - Models with Moderation
 - caption: Unit 3 - Evaluating Models
   chapters:
+  - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-15.ipynb
+    title: Chapter 15 - Estimating Populations
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-16.ipynb
-    title: Chapter 16 - Estimating Populations
+    title: Chapter 16 - Significance Testing
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-17.ipynb
-    title: Chapter 17 - Significance Testing
+    title: Chapter 17 - Significance Testing Whole Models
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-18.ipynb
-    title: Chapter 18 - Significance Testing Whole Models
+    title: Chapter 18 - Effect Sizes & Power
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-19.ipynb
-    title: Chapter 19 - Effect Sizes & Power
+    title: Chapter 19 - Alternate Approaches - Traditional Inference Methods
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-20.ipynb
-    title: Chapter 20 - Alternate Approaches - Traditional Inference Methods
+    title: Chapter 20 - Alternate Approaches - Bayesian Statistics
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-21.ipynb
-    title: Chapter 21 - Alternate Approaches - Bayesian Statistics
+    title: Chapter 21 - Bias due to Improper Model Building
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-22.ipynb
-    title: Chapter 22 - Bias due to Improper Model Building
-  - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-23.ipynb
-    title: Chapter 23 - Bias due to Improper Model Selection
+    title: Chapter 22 - Bias due to Improper Model Selection
