--- a/_toc.yml
+++ b/_toc.yml
@@ -43,7 +43,7 @@ parts:
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-16.ipynb
     title: Chapter 16 - Significance Testing
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-17.ipynb
-    title: Chapter 17 - Significance Testing Whole Models
+    title: Chapter 17 - Model Comparison
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-18.ipynb
     title: Chapter 18 - Effect Sizes & Statistical Power
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-19.ipynb
