--- a/_toc.yml
+++ b/_toc.yml
@@ -43,14 +43,13 @@ parts:
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-16.ipynb
     title: Chapter 16 - Significance Testing
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-17.ipynb
-    title: Chapter 17 - Model Comparison
+    title: Chapter 17 - Significance Testing Whole Models
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-18.ipynb
     title: Chapter 18 - Effect Sizes & Statistical Power
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-19.ipynb
-    title: Chapter 19 - Bias due to Improper Model Building
+    title: Chapter 19 - Model Bias
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-20.ipynb
     title: Chapter 20 - Alternate Approaches - Traditional Statistical Tools
   - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-21.ipynb
-    title: Chapter 21 - Alternative Approaches - Bayesian Statistics
-  - url: https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-22.ipynb
-    title: Chapter 22 - Lying with Statistics
+    title: Chapter 21 - Lying with Statistics
+
